--- a/game2/index.html
+++ b/game2/index.html
@@ -128,16 +128,17 @@
 	  	</div>
 	  </div>
 <div id="hwToPlay">
-<h3>طريقة اللعب</h3>
+<h3 class="green">طريقة اللعب</h3>
 <ul>
+<li><span>تعريف باللعبة:</span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك وبالتحكم بلوحة المفاتيح تستطيع ان تجد مكان المستكشفين الاربعه.</li>
 <li>انظر بتمعن الى الشكل الذي يظهر امامك</li>
 <li>قرر بشكل مبدئي ما شكل الخط المستقيم الذي يختبىء علية المستكشفون الاربعة</li>
-<li>ومفتاح الميل واحدا تلو الاخر حتى ينطبق الخط المستقيم الازرق على خط اختباء المستكشفين الاربعة</li>
+<li>ابدأ بتحريك مفاتيح <span style = "font-family:Arial;">x,y</span> ومفتاح الميل واحدا تلو الاخر حتى ينطبق الخط المستقيم الازرق على خط اختباء المستكشفين الاربعة</li>
 <li>اضغط انقاذ لتظهر لك نتيجة اختيارك</li>
 <li>إضغط التالي ليظهر لك شكلا جديدا</li>
 </ul>
 <a href="#" id = "closeHwToPlay" class="red-btn round-btn">
-    اغلاق
+    ابدا اللعبة
     </a>
       </div>
 </body>
