--- a/game2/index.html
+++ b/game2/index.html
@@ -79,7 +79,7 @@
       ابدأ اللعب
     </a>
     <a href="#" id = "howToPlay" class="red-btn round-btn">
-     طريقة اللعب
+     كيفية اللعب
     </a>
   	</div>
   	
@@ -128,17 +128,19 @@
 	  	</div>
 	  </div>
 <div id="hwToPlay">
-<h3 class="green">طريقة اللعب</h3>
-<ul>
-<li><span>تعريف باللعبة:</span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك وبالتحكم بلوحة المفاتيح تستطيع ان تجد مكان المستكشفين الاربعه.</li>
+<h3 class="green">كيفية اللعب</h3><p>
+<span>تعريف باللعبة:</br></span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك ومن خلال استخدام الفأرة تستطيع ان تجد مكان المستكشفين الاربعه.
+</br><span>تعليمات اللعب:</br></span> 
+<ol>
 <li>انظر بتمعن الى الشكل الذي يظهر امامك</li>
 <li>قرر بشكل مبدئي ما شكل الخط المستقيم الذي يختبىء علية المستكشفون الاربعة</li>
 <li>ابدأ بتحريك مفاتيح <span style = "font-family:Arial;">x,y</span> ومفتاح الميل واحدا تلو الاخر حتى ينطبق الخط المستقيم الازرق على خط اختباء المستكشفين الاربعة</li>
 <li>اضغط انقاذ لتظهر لك نتيجة اختيارك</li>
-<li>إضغط التالي ليظهر لك شكلا جديدا</li>
-</ul>
+<li>اضغط التالي ليظهر لك شكلا جديدا</li>
+</ol>
+</p>
 <a href="#" id = "closeHwToPlay" class="red-btn round-btn">
-    ابدا اللعبة
+    ابدأ اللعب
     </a>
     <br/>
     <br/>
