Add Help Button to the stage

--- a/game2/index.html
+++ b/game2/index.html
@@ -142,6 +142,9 @@
 <a href="#" id = "closeHwToPlay" class="red-btn round-btn">
     ابدأ اللعب
     </a>
+ <a href="#" id = "closeHwToPlay2" class="red-btn round-btn">
+    استمرار
+    </a>   
     <br/>
     <br/>
       </div>
