design bugs fixing

--- a/game2/index.html
+++ b/game2/index.html
@@ -130,7 +130,7 @@
 <div id="hwToPlay">
 <h3 class="green">كيفية اللعب</h3><p>
 <span>تعريف باللعبة:</br></span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك ومن خلال استخدام الفأرة تستطيع ان تجد مكان المستكشفين الاربعه.
-</br><span>تعليمات اللعب:</br></span> 
+</br></br><span>تعليمات اللعب:</br></span> 
 <ol>
 <li>انظر بتمعن الى الشكل الذي يظهر امامك</li>
 <li>قرر بشكل مبدئي ما شكل الخط المستقيم الذي يختبىء علية المستكشفون الاربعة</li>
