--- a/game4/index.html
+++ b/game4/index.html
@@ -35,7 +35,9 @@
   <div class="loading"></div>
   <div class="stage">	  
 	  <!--<div class="score"><span class="myscore">15</span><a hfref="#" class="theme"><i class="fa  fa-paint-brush"></i></a></div>-->
-	  <a class="sound"><i class="fa fa-volume-up sound-icon"></i></a>    
+	  <!--<a class="sound"><i class="fa fa-volume-up sound-icon"></i></a>  -->  
+    <a id="helpBtn" href="#" title="كيفية اللعب"><i class="fa fa-question-circle fa-2"></i></a>
+     <a id="backBtn" href="#" title="عودة"><i class="fa fa-arrow-circle-left fa-2"></i></a>
 	  <div class="playArea">
 	  	<div class="grid">
           <div class="header">
@@ -46,28 +48,28 @@
           </div>
           <div class="body">
             <div class="col">
-                <a href="#" class="row solve" id="q1"><span>100</span></a>
-                <a href="#" class="row solve" id="q5"><span>200</span></a>
-                <a href="#" class="row solve" id="q9"><span>300</span></a>
-                <a href="#" class="row solve" id="q13"><span>400</span></a>
+                <a href="#" class="row solve" id="q1" score="100"><span>4</span></a>
+                <a href="#" class="row solve" id="q5" score="200"><span>8</span></a>
+                <a href="#" class="row solve" id="q9" score="300"><span>12</span></a>
+                <a href="#" class="row solve" id="q13" score="400"><span>16</span></a>
             </div>
             <div class="col">
-                <a href="#" class="row solve" id="q2"><span>100</span></a>
-                <a href="#" class="row solve" id="q6"><span>200</span></a>
-                <a href="#" class="row solve" id="q10"><span>300</span></a>
-                <a href="#" class="row solve" id="q14"><span>400</span></a>
+                <a href="#" class="row solve" id="q2" score="100"><span>3</span></a>
+                <a href="#" class="row solve" id="q6" score="200"><span>7</span></a>
+                <a href="#" class="row solve" id="q10" score="300"><span>11</span></a>
+                <a href="#" class="row solve" id="q14" score="400"><span>15</span></a>
             </div>
             <div class="col">
-                <a href="#" class="row solve" id="q3"><span>100</span></a>
-                <a href="#" class="row solve" id="q7"><span>200</span></a>
-                <a href="#" class="row solve" id="q11"><span>300</span></a>
-                <a href="#" class="row solve" id="q15"><span>400</span></a>
+                <a href="#" class="row solve" id="q3" score="100"><span>2</span></a>
+                <a href="#" class="row solve" id="q7" score="200"><span>6</span></a>
+                <a href="#" class="row solve" id="q11" score="300"><span>10</span></a>
+                <a href="#" class="row solve" id="q15" score="400"><span>14</span></a>
             </div>
             <div class="col">
-                <a href="#" class="row solve" id="q4"><span>100</span></a>
-                <a href="#" class="row solve" id="q8"><span>200</span></a>
-                <a href="#" class="row solve" id="q12"><span>300</span></a>
-                <a href="#" class="row solve" id="q16"><span>400</span></a>
+                <a href="#" class="row solve" id="q4" score="100"><span>1</span></a>
+                <a href="#" class="row solve" id="q8" score="200"><span>5</span></a>
+                <a href="#" class="row solve" id="q12" score="300"><span>9</span></a>
+                <a href="#" class="row solve" id="q16" score="400"><span>13</span></a>
             </div>
           </div>
       </div>        
@@ -108,12 +110,16 @@
   <!-- Start Screen -->
   <div class="startScreen">
   	<div class="startTxt">
-    <p></p>
+    
   		<h3 id="title">النسب والاقترانات المثلثية - قهر المستحيل</h3>
-  	</div>
+  	
   	<a href="#" id = "startBtn" class="round-btn startBtn">
   		ابدأ اللعب
   	</a>
+    <a href="#" id = "howToPlay" class="red-btn round-btn">
+     كيفية اللعب
+    </a>
+    </div>
   	<div class="logo">
   		<p>© جميع الحقوق محفوظة ٢٠١٦ إدراك</p>
   		<img src="img/logo.png" width="100" height="auto"/>
@@ -133,6 +139,25 @@
 	  		<img src="img/logo.png" width="100" height="auto"/>
 	  	</div>
 	  </div>
+
+    <div id="hwToPlay">
+<h3 class="green">كيفية اللعب</h3><p>
+<span>تعريف باللعبة:<br></span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك ومن خلال استخدام الفأرة تستطيع ان تجد مكان المستكشفين الاربعه.
+<br><br><span>تعليمات اللعب:<br></span> 
+</p><ol>
+<li>يختار اللاعب مربع ما  فإذا كسب يزاد له عدد  من النقاط </li>
+<li>اذا اخطأ اللاعب فانه يخسر عددا من  النقاط وتظهر له الاجابة الصحيحة </li>
+</ol>
+<p></p>
+<a href="#" id="closeHwToPlay" class="red-btn round-btn">
+    ابدأ اللعب
+    </a>
+ <a href="#" id="closeHwToPlay2" class="red-btn round-btn">
+    استمرار
+    </a>   
+    <br>
+    <br>
+      </div>
 
 </body>
 </html>
