--- a/game4/index.html
+++ b/game4/index.html
@@ -141,10 +141,7 @@
 	  </div>
 
     <div id="hwToPlay">
-<h3 class="green">كيفية اللعب</h3><p>
-<span>تعريف باللعبة:<br></span> أربعة مستكشفين ضلوا طريقهم في الغابة، وقرروا ان يتفرقوا خوفا من اكتشافهم من قبل عدو ما ، لكن لكي يسهلوا عملية انقاذهم من قبل فرق الانقاذ قرروا ان يختبئوا بشكل خط مستقيم، معادلة الخط المستقيم تظهر امامك ومن خلال استخدام الفأرة تستطيع ان تجد مكان المستكشفين الاربعه.
-<br><br><span>تعليمات اللعب:<br></span> 
-</p><ol>
+<h3 class="green">كيفية اللعب</h3><ol>
 <li>يختار اللاعب مربع ما  فإذا كسب يزاد له عدد  من النقاط </li>
 <li>اذا اخطأ اللاعب فانه يخسر عددا من  النقاط وتظهر له الاجابة الصحيحة </li>
 </ol>
