--- a/game4/index.html
+++ b/game4/index.html
@@ -142,8 +142,10 @@
 
     <div id="hwToPlay">
 <h3 class="green">كيفية اللعب</h3><ol>
-<li>يختار اللاعب مربع ما  فإذا كسب يزاد له عدد  من النقاط </li>
-<li>اذا اخطأ اللاعب فانه يخسر عددا من  النقاط وتظهر له الاجابة الصحيحة </li>
+<li>قم باختيار مربع واحد من المربعات التي ستظهر لديك عند النقر على "ابدء اللعب"</li>
+<li>قم بالإجابة على السؤال الظاهر (القت المخصص لكل سؤال 120 ثانية)</li>
+<li>في حال اختيارك إجابة خاطئة سوف تتم اعادتك لبداية اللعبة.</li>
+<li>في حال اختيارك إجابة صحيحة سيتم إضافة نقاط السؤال الى مجموعك النهائي.</li>
 </ol>
 <p></p>
 <a href="#" id="closeHwToPlay" class="red-btn round-btn">
