--- a/game4/index.html
+++ b/game4/index.html
@@ -143,7 +143,7 @@
     <div id="hwToPlay">
 <h3 class="green">كيفية اللعب</h3><ol>
 <li>قم باختيار مربع واحد من المربعات التي ستظهر لديك عند النقر على "ابدء اللعب"</li>
-<li>قم بالإجابة على السؤال الظاهر (القت المخصص لكل سؤال 120 ثانية)</li>
+<li>قم بالإجابة على السؤال الظاهر (الوقت المخصص لكل سؤال 120 ثانية)</li>
 <li>في حال اختيارك إجابة خاطئة سوف تتم اعادتك لبداية اللعبة.</li>
 <li>في حال اختيارك إجابة صحيحة سيتم إضافة نقاط السؤال الى مجموعك النهائي.</li>
 </ol>
