Add Animation to Selection Dots

--- a/model2/index.html
+++ b/model2/index.html
@@ -40,9 +40,12 @@
           </svg>
         </div>
         <div class="bar">
-          <a href="#" class="dot circle green-bg tip" id="dot1" title="أنشطة ما قبل الصف"></a>
-          <a href="#" class="dot circle red-bg tip" id="dot2" title="أنشطة أثناء الصف"></a>
-          <a href="#" class="dot circle orange-bg tip" id="dot3" title="أنشطة ما بعد الصف"></a>
+          <div class="dot green-bg circle anim anim1"></div>
+          <div class="dot red-bg circle anim anim2"></div>
+          <div class="dot orange-bg circle anim anim3"></div>
+          <a href="#" class="dot circle green-bg tip grow" id="dot1" title="أنشطة ما قبل الصف"></a>          
+          <a href="#" class="dot circle red-bg tip grow" id="dot2" title="أنشطة أثناء الصف"></a>
+          <a href="#" class="dot circle orange-bg tip grow" id="dot3" title="أنشطة ما بعد الصف"></a>
         </div>
 
         <div class="block" id="blk1">
