Model 1 Text Replacement

--- a/model1/index.html
+++ b/model1/index.html
@@ -336,17 +336,17 @@
       <g>
         <g>
           <rect x="10.925" y="275.852" fill="none" width="99.727" height="18.154"/>
-          <text transform="matrix(1 0 0 1 10.9253 284.9922)" fill="#597991" font-size="13">ما وراء المعرفة</text>
+          <text transform="matrix(1 0 0 1 -40 284.9922)" fill="#597991" font-size="13">المعرفة ما وراء الإدراكية</text>
         </g>
         <g>
           <g>
             <polyline fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" points="77.807,297.525 63.468,291.537 
-              11.968,291.537      "/>
+              -40,291.537      "/>
             <g>
               <circle fill="#C6C6C6" cx="77.686" cy="297.475" r="2.632"/>
             </g>
             <g>
-              <circle fill="#C6C6C6" cx="12.1" cy="291.537" r="2.632"/>
+              <circle fill="#C6C6C6" cx="-40" cy="291.537" r="2.632"/>
             </g>
           </g>
         </g>
@@ -354,16 +354,16 @@
       <g>
         <g>
           <rect x="15" y="349.586" fill="none" width="78.915" height="18.154"/>
-          <text transform="matrix(1 0 0 1 15.0005 358.7266)" fill="#597991" font-size="13">الإجرائي</text>
+          <text transform="matrix(1 0 0 1 -10 358.7266)" fill="#597991" font-size="13"><tspan>المعرفة الإجرائية</tspan></text>
         </g>
         <g>
           <g>
-            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="103.5" y1="368" x2="16.5" y2="368"/>
+            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="103.5" y1="368" x2="-5" y2="368"/>
             <g>
               <circle fill="#C6C6C6" cx="103.04" cy="367.5" r="2.632"/>
             </g>
             <g>
-              <circle fill="#C6C6C6" cx="16.632" cy="367.5" r="2.632"/>
+              <circle fill="#C6C6C6" cx="-5" cy="367.5" r="2.632"/>
             </g>
           </g>
         </g>
@@ -371,16 +371,16 @@
       <g>
         <g>
           <rect x="52" y="386.586" fill="none" width="78.915" height="18.154"/>
-          <text transform="matrix(1 0 0 1 52.0005 395.7266)" fill="#597991" font-size="13">المفاهيمي</text>
+          <text transform="matrix(1 0 0 1 20.0005 395.7266)" fill="#597991" font-size="13">المعرفة المفاهيمية</text>
         </g>
         <g>
           <g>
-            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="141.5" y1="405" x2="53.5" y2="405"/>
+            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="141.5" y1="405" x2="20" y2="405"/>
             <g>
               <circle fill="#C6C6C6" cx="140.993" cy="404.5" r="2.632"/>
             </g>
             <g>
-              <circle fill="#C6C6C6" cx="53.632" cy="404.5" r="2.632"/>
+              <circle fill="#C6C6C6" cx="20" cy="404.5" r="2.632"/>
             </g>
           </g>
         </g>
@@ -388,16 +388,16 @@
       <g>
         <g>
           <rect x="94" y="427.586" fill="none" width="78.915" height="18.154"/>
-          <text transform="matrix(1 0 0 1 94.0005 436.7266)" fill="#597991" font-size="13">الواقعي</text>
+          <text transform="matrix(1 0 0 1 70.0005 436.7266)" fill="#597991" font-size="13">المعرفة الواقعية</text>
         </g>
         <g>
           <g>
-            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="181.5" y1="446" x2="94.5" y2="446"/>
+            <line fill="none" stroke="#C6C6C6" stroke-linecap="round" stroke-linejoin="round" x1="181.5" y1="446" x2="70" y2="446"/>
             <g>
               <circle fill="#C6C6C6" cx="181.868" cy="445.5" r="2.632"/>
             </g>
             <g>
-              <circle fill="#C6C6C6" cx="94.632" cy="445.5" r="2.632"/>
+              <circle fill="#C6C6C6" cx="70.632" cy="445.5" r="2.632"/>
             </g>
           </g>
         </g>
@@ -419,7 +419,7 @@
       </g>
       <g>
         <rect x="410.033" y="388.586" fill="none" width="69.914" height="18.154"/>
-        <text transform="matrix(1 0 0 1 410.0332 397.7266)" fill="#597991" font-size="13">الاستيعاب</text>
+        <text transform="matrix(1 0 0 1 430.0332 397.7266)" fill="#597991" font-size="13">الفهم</text>
       </g>
       <g>
         <g>
@@ -498,46 +498,46 @@
 	</div>
 	
 	<div id="blocksContent">
-		<div class="L00"><b>إنشاء </b>محفظة التعلم المبتكرة</div>
-		<div class="L01"><b>تصميم </b>سير عمل فعال للمشروع </div>
+		<div class="L00"><b>إنشاء </b>محفظة تعليمية مبتكرة</div>
+		<div class="L01"><b>تصميم </b>مخطط سير عمل فعال للمشروع </div>
 		<div class="L02"><b>تجميع </b>فريق من الخبراء</div>
-		<div class="L03"><b>إنشاء </b>سجل للأنشطة اليومية</div>
-		<div class="L04">وضع العناصر معًا لتشكيل كيان متماسك، وإعادة التنظيم في نمط أو بنية جديدة</div>
+		<div class="L03"><b>توليد </b>سجل للأنشطة اليومية</div>
+		<div class="L04">جمع العناصر معًا لتشكيل كيان متماسك، وإعادة التنظيم في نمط جديد أو بنية جديدة</div>
 		
 		<div class="L10"><b>التفكير </b>في تقدم المرء</div>
-		<div class="L11"><b>الحكم </b>على فعالية تقنيات أخذ العينات </div>
-		<div class="L12"><b>تحديد </b>أهمية النتائج </div>
+		<div class="L11"><b>الحكم </b>على فاعلية تقنيات اختيار العينات </div>
+		<div class="L12"><b>تحديد </b>ملاءمة النتائج </div>
 		<div class="L13"><b>التحقق </b>من وجود اتساق بين المصادر</div>
-		<div class="L14">إصدار الأحكام على أساس المعايير والمقاييس</div>
+		<div class="L14">إصدار الأحكام بناءً المعايير والمقاييس</div>
 		
-		<div class="L20"><b>تفكيك </b>التحيزات لدى المرء</div>
-		<div class="L21"><b>دمج </b>الامتثال للوائح</div>
-		<div class="L22"><b>تمييز </b>الثقافة العالية والمنخفضة</div>
-		<div class="L23"><b>تحديد </b>القائمة الأكثر اكتمالاً بالأنشطة </div>
-		<div class="L24">تقسيم المواد إلى أجزاء أساسية وتحديد كيفية ارتباط الأجزاء بعضها البعض وبالهيكل أو بالغرض العام.</div>
+		<div class="L20"><b>تفكيك </b>تحيزات المرء</div>
+		<div class="L21"><b>دمج </b>الامتثال مع الأنظمة</div>
+		<div class="L22"><b>تمييز </b>بين الثقافة العالية والمتدنية</div>
+		<div class="L23"><b>تحديد </b>قائمة الأنشطة الأكثر اكتمالًا </div>
+		<div class="L24">تقسيم المواد إلى أجزاء أساسية وتحديد كيفية ارتباط الأجزاء ببعضها وبالهيكل أو بالغرض العام.</div>
 		
 		<div class="L30"><b>استخدم </b>التقنيات التي تتناسب مع نقاط القوة للمرء</div>
 		<div class="L31"><b>إجراء </b>اختبارات درجة الحموضة لعينات المياه </div>
-		<div class="L32"><b>تقديم </b>المشورة للمستخدمين المبتدئين</div>
-		<div class="L33"><b>الرد </b>على الأسئلة المتداولة </div>
-		<div class="L34">تنفيذ أو استخدام الإجراء في موقف معين </div>
+		<div class="L32"><b>تقديم </b>النصح للمبتدئين</div>
+		<div class="L33"><b>الرد </b>على الأسئلة الشائعة </div>
+		<div class="L34">تنفيذ أو استخدام إجراء ما في موقف معين</div>
 		
 		<div class="L40"><b>توقع </b>استجابة المرء لصدمة ثقافية</div>
 		<div class="L41"><b>توضيح </b>إرشادات التجميع</div>
-		<div class="L42"><b>تصنيف </b>المواد اللاصقة حسب السمية</div>
-		<div class="L43"><b>تلخيص </b>ميزات منتج جديد</div>
-		<div class="L44">بناء المعنى من الرسائل التعليمية، بما في ذلك الاتصالات الشفهية والكتابية والبيانية.</div>
+		<div class="L42"><b>تصنيف </b>المواد اللاصقة حسب درجة السُميّة</div>
+		<div class="L43"><b>تلخيص </b>خصائص منتج جديد</div>
+		<div class="L44">بناء المعنى من الرسائل التعليمية، بما في ذلك التواصل الشفهي، المكتوب، والبياني.</div>
 		
-		<div class="L50"><b>تحديد </b>إستراتيجيات الاحتفاظ بالمعلومات.</div>
-		<div class="L51"><b>تذكر </b>كيفية إجراء CPR.</div>
+		<div class="L50"><b>تحديد </b>استراتيجيات الاحتفاظ بالمعلومات.</div>
+		<div class="L51"><b>تذكر </b>كيفية إجراء الإنعاش القلبي الرئوي (CPR).</div>
 		<div class="L52"><b>التعرف </b>على أعراض الإرهاق</div>
 		<div class="L53"><b>إدراج </b>الألوان الأولية والثانوية</div>
-		<div class="L54">استرجاع المعارف ذات الصلة من الذاكرة طويلة الأمد</div>
+		<div class="L54">استرجاع المعرفة ذات الصلة من الذاكرة طويلة الأمد</div>
 		
-		<div class="L60">علم الإدراك بشكل عام، فضلاً عن الوعي والمعرفة والإدراك لدى المرء</div>
-		<div class="L61">كيفية القيام بشيء ما وأساليب التحقيق ومعايير استخدام المهارات والخوارزميات والتقنيات والأساليب</div>
-		<div class="L62">العلاقات المتبادلة بين العناصر الأساسية في هيكل أكبر يمكنهم من العمل معًا </div>
-		<div class="L63">العناصر الأساسية التي يجب أن يعرفها المتعلمين للاطلاع على فروع المعرفة أو حل المشاكل الضمنية</div>
+		<div class="L60">علم الإدراك بشكل عام، فضلاً عن الوعي والمعرفة بالإدراك الخاص بالمرء</div>
+		<div class="L61">كيفية القيام بشيء ما، أساليب الاستفهام، ومعايير استخدام المهارات، الخوارزميات، التقنيات، والأساليب</div>
+		<div class="L62">العلاقات المتبادلة بين العناصر الأساسية ضمن هيكلٍ أكبر يمكّنهم من العمل معًا</div>
+		<div class="L63">العناصر الأساسية التي يجب أن يعرفها المتعلمون ليكونوا مطلعين على مجالات المعرفة أو حل المشاكل ضمنها</div>
 		
 	</div>
 
