edites by Shahed Atieh

--- a/model1/index.html
+++ b/model1/index.html
@@ -498,40 +498,40 @@
 	</div>
 	
 	<div id="blocksContent">
-		<div class="L00"><b>إنشاء </b>محفظة تعليمية مبتكرة</div>
-		<div class="L01"><b>تصميم </b>مخطط سير عمل فعال للمشروع </div>
-		<div class="L02"><b>تجميع </b>فريق من الخبراء</div>
-		<div class="L03"><b>توليد </b>سجل للأنشطة اليومية</div>
+		<div class="L00"><b>إنشاء </b>فيديوهات تعليمية تساعد الطلاب على تحسين ذاكرتهم</div>
+		<div class="L01"><b>تصميم </b>مخطط لمشروع  توفير المياه الصالحة للشرب لجميع دول العالم </div>
+		<div class="L02"><b>تجميع </b>فريق من الخبراء في المياه</div>
+		<div class="L03"><b>مناقشة  </b>أهمية وتأثير توفير مياه صالحة للشرب لجميع دول العالم </div>
 		<div class="L04">جمع العناصر معًا لتشكيل كيان متماسك، وإعادة التنظيم في نمط جديد أو بنية جديدة</div>
 		
-		<div class="L10"><b>التفكير </b>في تقدم المرء</div>
-		<div class="L11"><b>الحكم </b>على فاعلية تقنيات اختيار العينات </div>
-		<div class="L12"><b>تحديد </b>ملاءمة النتائج </div>
-		<div class="L13"><b>التحقق </b>من وجود اتساق بين المصادر</div>
+		<div class="L10"><b>إصدار  </b>توصيات لتحسين ذاكرة الطلاب في المدارس</div>
+		<div class="L11"><b>قياس </b>تأثير الشعوب على سياسات الدول في المياه  </div>
+		<div class="L12"><b>توضيح </b> أهمية السياسات الدولية والإقليمية على مستقبل المياه  </div>
+		<div class="L13"><b>التحقق </b> من وجود اتساق بين الدول في سياسات التعامل مع الماء</div>
 		<div class="L14">إصدار الأحكام بناءً المعايير والمقاييس</div>
 		
-		<div class="L20"><b>تفكيك </b>تحيزات المرء</div>
-		<div class="L21"><b>دمج </b>الامتثال مع الأنظمة</div>
-		<div class="L22"><b>تمييز </b>بين الثقافة العالية والمتدنية</div>
-		<div class="L23"><b>تحديد </b>قائمة الأنشطة الأكثر اكتمالًا </div>
+		<div class="L20"><b>فحص </b>فحص العوامل الأخرى التي تؤثر على ذاكرة الإنسان</div>
+		<div class="L21"><b>استنباط </b> كمية الماء المتوفرة لدى البلاد العربية بناءا على معدلات الاستهلاك ومدى تجدد المياه </div>
+		<div class="L22"><b>تحليل </b> أسباب ندرة المياه في الدول العربية</div>
+		<div class="L23"><b>توضيح </b> دور الصناعات المختلفة في تلوث المياه </div>
 		<div class="L24">تقسيم المواد إلى أجزاء أساسية وتحديد كيفية ارتباط الأجزاء ببعضها وبالهيكل أو بالغرض العام.</div>
 		
-		<div class="L30"><b>استخدم </b>التقنيات التي تتناسب مع نقاط القوة للمرء</div>
-		<div class="L31"><b>إجراء </b>اختبارات درجة الحموضة لعينات المياه </div>
-		<div class="L32"><b>تقديم </b>النصح للمبتدئين</div>
-		<div class="L33"><b>الرد </b>على الأسئلة الشائعة </div>
+		<div class="L30"><b>استخدام </b> الماء في تجربة لتنشيط ذاكرة مجموعة من زملائك في الفصل وسجل النتائج</div>
+		<div class="L31"><b>إجراء </b> اختبارات درجة الحموضة لعينات المياه  </div>
+		<div class="L32"><b>تصنيع </b> نموذج يوضح كيف تتكون المياه الجوفية </div>
+		<div class="L33"><b>تنظيم </b> يوم عن التوعية بأهمية الماء </div>
 		<div class="L34">تنفيذ أو استخدام إجراء ما في موقف معين</div>
 		
-		<div class="L40"><b>توقع </b>استجابة المرء لصدمة ثقافية</div>
-		<div class="L41"><b>توضيح </b>إرشادات التجميع</div>
-		<div class="L42"><b>تصنيف </b>المواد اللاصقة حسب درجة السُميّة</div>
-		<div class="L43"><b>تلخيص </b>خصائص منتج جديد</div>
+		<div class="L40"><b>تفسير </b> أهمية الماء لتنشيط ذاكرة الإنسان</div>
+		<div class="L41"><b>المقارنة </b> بين استخدامات الماء في حالاته الثلاث</div>
+		<div class="L42"><b>تصنيف </b> موارد الماء المتنوعة </div>
+		<div class="L43"><b>تلخيص </b>  خصائص الماء</div>
 		<div class="L44">بناء المعنى من الرسائل التعليمية، بما في ذلك التواصل الشفهي، المكتوب، والبياني.</div>
 		
-		<div class="L50"><b>تحديد </b>استراتيجيات الاحتفاظ بالمعلومات.</div>
-		<div class="L51"><b>تذكر </b>كيفية إجراء الإنعاش القلبي الرئوي (CPR).</div>
-		<div class="L52"><b>التعرف </b>على أعراض الإرهاق</div>
-		<div class="L53"><b>إدراج </b>الألوان الأولية والثانوية</div>
+		<div class="L50"><b>تحديد </b> العلاقة بين الماء وذاكرة الإنسان.</div>
+		<div class="L51"><b>سرد </b> كيفية تحويل الماء من حالة لأخرى </div>
+		<div class="L52"><b>توضيح </b> أهمية الماء في الحياة </div>
+		<div class="L53"><b>تحديد </b> حالات المياه وخصائصها </div>
 		<div class="L54">استرجاع المعرفة ذات الصلة من الذاكرة طويلة الأمد</div>
 		
 		<div class="L60">علم الإدراك بشكل عام، فضلاً عن الوعي والمعرفة بالإدراك الخاص بالمرء</div>
