--- a/counting_bird/index.html
+++ b/counting_bird/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 1024px; height: 576px"></div>
-      <div class="footer">
+     <!-- <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title">Counting Bird</div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
